--- a/.classpath
+++ b/.classpath
@@ -3,5 +3,7 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/lombok"/>
+	<classpathentry kind="lib" path="D:/eclipse/namescanner.jar"/>
+	<classpathentry kind="lib" path="D:/eclipse/auto-service-1.0-rc2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
